namespace Domain.Enums;

public enum OrderItemStatus
{
    Preparing = 0,
    Served = 1,
    Cancelled = 2
}
