namespace Domain.Enums;

public enum TableStatus
{
    Available = 0,
    LockedForPayment = 1,
    Reserved = 2,
    Occupied = 3,
    Cleaning = 4
}
