@startuml VinDining_ClassDiagram
!theme plain
skinparam classAttributeIconSize 0
skinparam linetype ortho

abstract class BaseEntity {
    +Guid Id
    +DateTime CreatedAtUtc
    +DateTime? UpdatedAtUtc
}

enum StaffRole {
    Waitstaff
    Expediter
    Manager
    Admin
}

enum TableStatus {
    Available
    LockedForPayment
    Reserved
    Occupied
    Cleaning
}

enum TableZone {
    MainHall
    VIP
    Balcony
}

enum ReservationStatus {
    AwaitingPayment
    Confirmed
    Completed
    Cancelled
    Expired
    Paid_TableLost
}

enum DepositStatus {
    Pending
    Paid
    Refunded
    Forfeited
}

enum OrderStatus {
    Processing
    Completed
    Cancelled
}

enum OrderItemStatus {
    Preparing
    Served
    Cancelled
}

enum PaymentMethod {
    Cash
    Card
    BankTransfer
    DepositCovered
    VNPAY
}

class Guest {
    +string FullName
    +string PhoneNumber
    +string Email
    +string? Address
}

class Staff {
    +string FullName
    +string Username
    +string Email
    +string PasswordHash
    +StaffRole Role
    +bool IsActive
}

class Table {
    +string TableNumber
    +int Capacity
    +TableZone Zone
    +TableStatus Status
    +bool IsActive
}

class Reservation {
    +string BookingCode
    +Guid GuestId
    +Guid TableId
    +DateTime ReservationTime
    +string DiningShift
    +int PartySize
    +ReservationStatus Status
    +string? AllergyNotes
    +DateTime? CancelledAt
    +string? CancellationReason
}

class Deposit {
    +Guid ReservationId
    +decimal Amount
    +string TransactionId
    +PaymentMethod PaymentMethod
    +DepositStatus Status
    +DateTime? PaidAt
    +decimal? RefundAmount
    +DateTime? RefundedAt
    +string? RefundReason
    +Guid? ApprovedByStaffId
}

class Category {
    +string Name
    +string Description
    +int DisplayOrder
    +bool IsActive
}

class MenuItem {
    +Guid CategoryId
    +string Name
    +string Description
    +decimal Price
    +string? ImageUrl
    +bool IsAvailable
    +string? AllergyInfo
}

class Order {
    +Guid TableId
    +Guid? ReservationId
    +Guid CreatedByStaffId
    +OrderStatus Status
    +DateTime OpenedAt
    +DateTime? ClosedAt
}

class OrderItem {
    +Guid OrderId
    +Guid MenuItemId
    +int Quantity
    +decimal UnitPrice
    +string? Note
    +OrderItemStatus Status
    +Guid? ServedByStaffId
    +DateTime? ServedAt
}

class Invoice {
    +Guid OrderId
    +Guid SettledByStaffId
    +decimal Subtotal
    +decimal ServiceCharge
    +decimal VatAmount
    +decimal DeductedDeposit
    +decimal AmountPayable
    +PaymentMethod PaymentMethod
    +DateTime IssuedAt
    +bool IsPaid
}

class Feedback {
    +Guid GuestId
    +Guid? ReservationId
    +int Rating
    +string? Comment
}

BaseEntity <|-- Guest
BaseEntity <|-- Staff
BaseEntity <|-- Table
BaseEntity <|-- Reservation
BaseEntity <|-- Deposit
BaseEntity <|-- Category
BaseEntity <|-- MenuItem
BaseEntity <|-- Order
BaseEntity <|-- OrderItem
BaseEntity <|-- Invoice
BaseEntity <|-- Feedback

Guest "1" --> "0..*" Reservation : Makes
Guest "1" --> "0..*" Feedback : Submits
Table "1" --> "0..*" Reservation : Hosted at
Table "1" --> "0..*" Order : Has active
Reservation "1" *-- "1" Deposit : Guaranteed by
Reservation "0..1" <-- "0..1" Order : Inherits deposit
Reservation "0..1" --> "0..1" Feedback : Reviewed by

Category "1" *-- "0..*" MenuItem : Classifies
Order "1" *-- "1..*" OrderItem : Composes
MenuItem "1" <-- "0..*" OrderItem : Refers to
Order "1" --> "0..1" Invoice : Billed as

Staff "1" --> "0..*" Order : Waitstaff Creates
Staff "1" --> "0..*" OrderItem : Expediter Confirms
Staff "1" --> "0..*" Invoice : Waitstaff Settles
Staff "0..1" --> "0..*" Deposit : Manager Overrides

@enduml
